Added missing types.

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -865,6 +865,12 @@ Reference:
         path: /reference/runtime/qsys-runtime/decimal-methods.html
       - title: DecimalOps
         path: /reference/runtime/qsys-runtime/decimal-ops.html
+      - title: Dim`3
+        path: /reference/runtime/qsys-runtime/dim`3.html
+      - title: Dim`4
+        path: /reference/runtime/qsys-runtime/dim`4.html
+      - title: Dim`5
+        path: /reference/runtime/qsys-runtime/dim`5.html
       - title: DimArrayTypeAttribute
         path: /reference/runtime/qsys-runtime/dim-array-type-attribute.html
       - title: DimensionAttribute
@@ -961,10 +967,18 @@ Reference:
         path: /reference/runtime/qsys-runtime/invalid-virtual-terminal-exception.html
       - title: JobShutDownException
         path: /reference/runtime/qsys-runtime/job-shut-down-exception.html
+      - title: Len`3
+        path: /reference/runtime/qsys-runtime/len`3.html
+      - title: Len`4
+        path: /reference/runtime/qsys-runtime/len`4.html
+      - title: Len`5
+        path: /reference/runtime/qsys-runtime/len`5.html
       - title: LibraryListException
         path: /reference/runtime/qsys-runtime/library-list-exception.html
       - title: LocalScopeDS
         path: /reference/runtime/qsys-runtime/local-scope-ds.html
+      - title: LocalScopeMultiDS`1
+        path: /reference/runtime/qsys-runtime/local-scope-multi-ds`1.html
       - title: MemUnit
         path: /reference/runtime/qsys-runtime/mem-unit.html
       - title: MessageFileReader
@@ -983,14 +997,22 @@ Reference:
         path: /reference/runtime/qsys-runtime/network-blocking-update-exception.html
       - title: NonexistentDataAreaException
         path: /reference/runtime/qsys-runtime/nonexistent-data-area-exception.html
+      - title: NoPassOmit`1
+        path: /reference/runtime/qsys-runtime/no-pass-omit`1.html
       - title: NullCapableFieldAttribute
         path: /reference/runtime/qsys-runtime/null-capable-field-attribute.html
+      - title: Omissible`1
+        path: /reference/runtime/qsys-runtime/omissible`1.html
       - title: OpenSimpleQueryFileException
         path: /reference/runtime/qsys-runtime/open-simple-query-file-exception.html
+      - title: Optional`1
+        path: /reference/runtime/qsys-runtime/optional`1.html
       - title: OSExecute
         path: /reference/runtime/qsys-runtime/os-execute.html
       - title: Parameter
         path: /reference/runtime/qsys-runtime/parameter.html
+      - title: ParameterOptions`1
+        path: /reference/runtime/qsys-runtime/parameter-options`1.html
       - title: PrintFile
         path: /reference/runtime/qsys-runtime/print-file.html
       - title: PrintFileBase
@@ -1033,6 +1055,8 @@ Reference:
         path: /reference/runtime/qsys-runtime/string-methods.html
       - title: StringOps
         path: /reference/runtime/qsys-runtime/string-ops.html
+      - title: Table`1
+        path: /reference/runtime/qsys-runtime/table`1.html
       - title: TableMethods
         path: /reference/runtime/qsys-runtime/table-methods.html
       - title: TooManySubfileRecordsException
@@ -1357,10 +1381,18 @@ Reference:
         path: /reference/runtime/qsys-runtime/ids-data-area.html
       - title: IDSField
         path: /reference/runtime/qsys-runtime/ids-field.html
+      - title: IFixedArray`2
+        path: /reference/runtime/qsys-runtime/i-fixed-array`2.html
+      - title: IFixedArrayBase`2
+        path: /reference/runtime/qsys-runtime/i-fixed-array-base`2.html
+      - title: IFixedArrayInDS`2
+        path: /reference/runtime/qsys-runtime/i-fixed-array-in-ds`2.html
       - title: IFixedDateTime
         path: /reference/runtime/qsys-runtime/i-fixed-date-time.html
       - title: IFixedSizeType
         path: /reference/runtime/qsys-runtime/i-fixed-size-type.html
+      - title: IFixedSizeType`1
+        path: /reference/runtime/qsys-runtime/i-fixed-size-type`1.html
       - title: ILayout
         path: /reference/runtime/qsys-runtime/i-layout.html
       - title: ILen
@@ -1374,10 +1406,56 @@ Reference:
     - sectiontitle: Structs
       sectionpath: /reference/runtime/qsys-runtime/landing-page-structs.html
       section:
+      - title: CharArray`1
+        path: /reference/runtime/qsys-runtime/char-array`1.html
+      - title: CharArrayInDS`1
+        path: /reference/runtime/qsys-runtime/char-array-in-ds`1.html
+      - title: FixedArray`2
+        path: /reference/runtime/qsys-runtime/fixed-array`2.html
+      - title: FixedDate`2
+        path: /reference/runtime/qsys-runtime/fixed-date`2.html
+      - title: FixedDateArray`3
+        path: /reference/runtime/qsys-runtime/fixed-date-array`3.html
+      - title: FixedDateArrayInDS`3
+        path: /reference/runtime/qsys-runtime/fixed-date-array-in-ds`3.html
+      - title: FixedDecimal`2
+        path: /reference/runtime/qsys-runtime/fixed-decimal`2.html
+      - title: FixedDecimalArray`3
+        path: /reference/runtime/qsys-runtime/fixed-decimal-array`3.html
+      - title: FixedDecimalArrayInDS`3
+        path: /reference/runtime/qsys-runtime/fixed-decimal-array-in-ds`3.html
+      - title: FixedString`1
+        path: /reference/runtime/qsys-runtime/fixed-string`1.html
+      - title: FixedStringArray`2
+        path: /reference/runtime/qsys-runtime/fixed-string-array`2.html
+      - title: FixedStringArrayInDS`2
+        path: /reference/runtime/qsys-runtime/fixed-string-array-in-ds`2.html
+      - title: FixedTime`2
+        path: /reference/runtime/qsys-runtime/fixed-time`2.html
+      - title: FixedTimeArray`3
+        path: /reference/runtime/qsys-runtime/fixed-time-array`3.html
+      - title: FixedTimeArrayInDS`3
+        path: /reference/runtime/qsys-runtime/fixed-time-array-in-ds`3.html
+      - title: FixedTimestamp`1
+        path: /reference/runtime/qsys-runtime/fixed-timestamp`1.html
+      - title: FixedTimestampArray`2
+        path: /reference/runtime/qsys-runtime/fixed-timestamp-array`2.html
+      - title: FixedTimestampArrayInDS`2
+        path: /reference/runtime/qsys-runtime/fixed-timestamp-array-in-ds`2.html
       - title: Indicator
         path: /reference/runtime/qsys-runtime/indicator.html
+      - title: IndicatorArray`1
+        path: /reference/runtime/qsys-runtime/indicator-array`1.html
+      - title: IndicatorArrayInDS`1
+        path: /reference/runtime/qsys-runtime/indicator-array-in-ds`1.html
+      - title: IntArrayInDS`1
+        path: /reference/runtime/qsys-runtime/int-array-in-ds`1.html
       - title: Layout
         path: /reference/runtime/qsys-runtime/layout.html
+      - title: LongArrayInDS`1
+        path: /reference/runtime/qsys-runtime/long-array-in-ds`1.html
+      - title: ShortArrayInDS`1
+        path: /reference/runtime/qsys-runtime/short-array-in-ds`1.html
   - sectiontitle: ASNA.QSys.Runtime.JobSupport
     sectionpath: /reference/runtime/qsys-runtime-job-support/landing-page-namespace.html
     section:
