Simplify generics with one parameter.

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -977,7 +977,7 @@ Reference:
         path: /reference/runtime/qsys-runtime/library-list-exception.html
       - title: LocalScopeDS
         path: /reference/runtime/qsys-runtime/local-scope-ds.html
-      - title: LocalScopeMultiDS&lt;T1&gt;
+      - title: LocalScopeMultiDS&lt;T&gt;
         path: /reference/runtime/qsys-runtime/local-scope-multi-ds-1.html
       - title: MemUnit
         path: /reference/runtime/qsys-runtime/mem-unit.html
@@ -997,21 +997,21 @@ Reference:
         path: /reference/runtime/qsys-runtime/network-blocking-update-exception.html
       - title: NonexistentDataAreaException
         path: /reference/runtime/qsys-runtime/nonexistent-data-area-exception.html
-      - title: NoPassOmit&lt;T1&gt;
+      - title: NoPassOmit&lt;T&gt;
         path: /reference/runtime/qsys-runtime/no-pass-omit-1.html
       - title: NullCapableFieldAttribute
         path: /reference/runtime/qsys-runtime/null-capable-field-attribute.html
-      - title: Omissible&lt;T1&gt;
+      - title: Omissible&lt;T&gt;
         path: /reference/runtime/qsys-runtime/omissible-1.html
       - title: OpenSimpleQueryFileException
         path: /reference/runtime/qsys-runtime/open-simple-query-file-exception.html
-      - title: Optional&lt;T1&gt;
+      - title: Optional&lt;T&gt;
         path: /reference/runtime/qsys-runtime/optional-1.html
       - title: OSExecute
         path: /reference/runtime/qsys-runtime/os-execute.html
       - title: Parameter
         path: /reference/runtime/qsys-runtime/parameter.html
-      - title: ParameterOptions&lt;T1&gt;
+      - title: ParameterOptions&lt;T&gt;
         path: /reference/runtime/qsys-runtime/parameter-options-1.html
       - title: PrintFile
         path: /reference/runtime/qsys-runtime/print-file.html
@@ -1055,7 +1055,7 @@ Reference:
         path: /reference/runtime/qsys-runtime/string-methods.html
       - title: StringOps
         path: /reference/runtime/qsys-runtime/string-ops.html
-      - title: Table&lt;T1&gt;
+      - title: Table&lt;T&gt;
         path: /reference/runtime/qsys-runtime/table-1.html
       - title: TableMethods
         path: /reference/runtime/qsys-runtime/table-methods.html
@@ -1391,7 +1391,7 @@ Reference:
         path: /reference/runtime/qsys-runtime/i-fixed-date-time.html
       - title: IFixedSizeType
         path: /reference/runtime/qsys-runtime/i-fixed-size-type.html
-      - title: IFixedSizeType<T1>
+      - title: IFixedSizeType<T>
         path: /reference/runtime/qsys-runtime/i-fixed-size-type`1.html
       - title: ILayout
         path: /reference/runtime/qsys-runtime/i-layout.html
@@ -1406,9 +1406,9 @@ Reference:
     - sectiontitle: Structs
       sectionpath: /reference/runtime/qsys-runtime/landing-page-structs.html
       section:
-      - title: CharArray<T1>
+      - title: CharArray<T>
         path: /reference/runtime/qsys-runtime/char-array-1.html
-      - title: CharArrayInDS<T1>
+      - title: CharArrayInDS<T>
         path: /reference/runtime/qsys-runtime/char-array-in-ds-1.html
       - title: FixedArray<T1, T2>
         path: /reference/runtime/qsys-runtime/fixed-array-2.html
@@ -1424,7 +1424,7 @@ Reference:
         path: /reference/runtime/qsys-runtime/fixed-decimal-array-3.html
       - title: FixedDecimalArrayInDS<T1, T2, T3>
         path: /reference/runtime/qsys-runtime/fixed-decimal-array-in-ds-3.html
-      - title: FixedString<T1>
+      - title: FixedString<T>
         path: /reference/runtime/qsys-runtime/fixed-string-1.html
       - title: FixedStringArray<T1, T2>
         path: /reference/runtime/qsys-runtime/fixed-string-array-2.html
@@ -1436,7 +1436,7 @@ Reference:
         path: /reference/runtime/qsys-runtime/fixed-time-array-3.html
       - title: FixedTimeArrayInDS<T1, T2, T3>
         path: /reference/runtime/qsys-runtime/fixed-time-array-in-ds-3.html
-      - title: FixedTimestamp<T1>
+      - title: FixedTimestamp<T>
         path: /reference/runtime/qsys-runtime/fixed-timestamp-1.html
       - title: FixedTimestampArray<T1, T2>
         path: /reference/runtime/qsys-runtime/fixed-timestamp-array-2.html
@@ -1444,17 +1444,17 @@ Reference:
         path: /reference/runtime/qsys-runtime/fixed-timestamp-array-in-ds-2.html
       - title: Indicator
         path: /reference/runtime/qsys-runtime/indicator.html
-      - title: IndicatorArray<T1>
+      - title: IndicatorArray<T>
         path: /reference/runtime/qsys-runtime/indicator-array-1.html
-      - title: IndicatorArrayInDS<T1>
+      - title: IndicatorArrayInDS<T>
         path: /reference/runtime/qsys-runtime/indicator-array-in-ds-1.html
-      - title: IntArrayInDS<T1>
+      - title: IntArrayInDS<T>
         path: /reference/runtime/qsys-runtime/int-array-in-ds-1.html
       - title: Layout
         path: /reference/runtime/qsys-runtime/layout.html
-      - title: LongArrayInDS<T1>
+      - title: LongArrayInDS<T>
         path: /reference/runtime/qsys-runtime/long-array-in-ds-1.html
-      - title: ShortArrayInDS<T1>
+      - title: ShortArrayInDS<T>
         path: /reference/runtime/qsys-runtime/short-array-in-ds-1.html
   - sectiontitle: ASNA.QSys.Runtime.JobSupport
     sectionpath: /reference/runtime/qsys-runtime-job-support/landing-page-namespace.html
