--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -341,6 +341,8 @@ Manuals:
     - sectiontitle: Expo Website Configuration
       sectionpath: /manuals/configuration/configure-expo-website.html
       section:
+      - title: Configuring Job Idle Timeout
+        path: /manuals/configuration/configure-job-idle-timeout.html      
       - title: Enabling Multiple Jobs per Browser
         path: /manuals/configuration/multiple-jobs-one-browser.html
       - title: Expo Client-Side Content
