--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,16 @@ on:
   push:
     branches:
       - main
+    workflow_dispatch:
+      
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
@@ -15,6 +25,10 @@ jobs:
 
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
+      
+    - name: Setup Pages
+      id: pages
+      uses: actions/configure-pages@v5
 
     - name: Install Jekyll and dependencies
       run: |
@@ -32,10 +46,20 @@ jobs:
     - name: Run Pagefind
       run: |
         pagefind --source ./_site --output-path ./_site/search
+        
+    - name: Upload artifact
+      # Automatically uploads an artifact from the './_site' directory by default
+      uses: actions/upload-pages-artifact@v3
 
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     runs-on: ubuntu-latest
+
     needs: build
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
