--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,16 @@ jobs:
       # Automatically uploads an artifact from the './_site' directory by default
       uses: actions/upload-pages-artifact@v3
 
+  reportBuildStatus:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Report build status
+      run: |
+        gh api -X POST "repos/$GITHUB_REPOSITORY/pages/telemetry" \
+          -F github_run_id="$GITHUB_RUN_ID" \
+          -F conclusion="$CONCLUSION"
+
   deploy:
     environment:
       name: github-pages
